--- a/src/app/components/pages/register/register.component.html
+++ b/src/app/components/pages/register/register.component.html
@@ -1,1 +1,8 @@
 <!-- * REGISTER-PAGE * -->
+<span *ngIf="page">
+
+    <img [src]="page.bannerPhotoURL" class="bannerPhotoURL">
+
+    <h1>{{ page.title }}</h1>
+
+</span>
