--- a/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
+++ b/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
@@ -9,9 +9,33 @@
     </div>
 </div>
 
+<div class="container mb-3">
+    <div class="row">
+        <div class="col-lg-8"></div>
+        <div class="col-lg-4">
+            <div class="card bg-light text-light text-center">
+                <div class="card-body p-3">
+                    <label class="switcher switcher-md">
+                        <input type="checkbox" class="switcher-input">
+                        <span class="switcher-indicator" (click)="onTogglePagePreview()">
+                        <span class="switcher-yes">
+                            <i class="fa fa-check"></i>
+                        </span>
+                        <span class="switcher-no">
+                            <i class="fa fa-times"></i>
+                        </span>
+                        </span>
+                        <span class="switcher-label">Toggle Preview</span>
+                    </label>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="container-fluid mb-5">
     <div class="row">
-        <div class="col-md-6" *ngIf="page">
+        <div class="col" *ngIf="page">
             <div class="card">
                 <div class="card-body">
                     <div class="card-title">
@@ -173,8 +197,26 @@
                             </div>
                         </div>
 
+
                         <div class="form-group">
-                            <label>Image URL</label>
+                            <label>Banner Image URL
+                                <small>(Top banner image)</small>
+                            </label>
+                            <input type="text"
+                                   class="form-control"
+                                   [class.invalid]="!f.bannerPhotoURL.valid && f.bannerPhotoURL.touched"
+                                   [(ngModel)]="bannerPhotoURL"
+                                   formControlName="bannerPhotoURL">
+                            <p class="help-block alert alert-warning text-center mt-1"
+                               *ngIf="!f.bannerPhotoURL.valid && f.bannerPhotoURL.touched">
+                                <b>Banner Image URL</b> is required!
+                            </p>
+                        </div>
+
+                        <div class="form-group">
+                            <label>Image URL
+                                <small>(Image on the page)</small>
+                            </label>
                             <input type="text"
                                    class="form-control"
                                    [class.invalid]="!f.photoURL.valid && f.photoURL.touched"
@@ -225,8 +267,11 @@
         </div>
 
 
-        <div class="col-md-6" *ngIf="page">
+        <div class="col-md-6" *ngIf="page && togglePagePreview">
             <div class="card">
+                <p>Banner Photo</p>
+                <img class="card-img-top img-fluid" [src]="page.bannerPhotoURL" [alt]="page.title">
+                <p>Page Photo</p>
                 <img class="card-img-top img-fluid" [src]="page.photoURL" [alt]="page.title">
                 <div class="card-body">
                     <h5 class="card-title">{{ page.title }}</h5>
