--- a/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.html
+++ b/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.html
@@ -9,13 +9,20 @@
     <div class="row">
         <div class="col-lg-8"></div>
         <div class="col-lg-4">
-            <div class="card text-center">
+            <div class="card bg-light text-light text-center">
                 <div class="card-body p-3">
-                    <mat-slide-toggle
-                            [color]="color"
-                            (click)="toggleListCardView()">
-                        Toggle View
-                    </mat-slide-toggle>
+                    <label class="switcher switcher-md">
+                        <input type="checkbox" class="switcher-input">
+                        <span class="switcher-indicator" (click)="toggleListCardView()">
+                                <span class="switcher-yes">
+                                    <i class="fa fa-check"></i>
+                                </span>
+                                <span class="switcher-no">
+                                    <i class="fa fa-times"></i>
+                                </span>
+                                </span>
+                        <span class="switcher-label">Toggle View</span>
+                    </label>
                 </div>
             </div>
         </div>
@@ -37,7 +44,7 @@
 <!--</div>-->
 <!--</div>-->
 <div class="layout-content mb-5" *ngIf="!showListToggle">
-    <div class="container">
+    <div class="container card-list">
         <div class="card-columns">
             <ddw-admin-page-item
                     *ngFor="let pageEl of page$ | async;"
@@ -61,7 +68,8 @@
                 <table id="user-list" class="table table-striped table-bordered table-hover">
                     <thead>
                     <tr>
-                        <th scope="col">Page</th>
+                        <th scope="col">Banner Image</th>
+                        <th scope="col">Body Image</th>
                         <th scope="col">Title</th>
                         <th scope="col">Body</th>
                         <th scope="col">Published</th>
@@ -74,8 +82,13 @@
                     <tr *ngFor="let page of pageList | async;">
                         <td scope="col">
                             <a [routerLink]="['/admin/pages/', page.uid]">
+                                <img [src]="page.bannerPhotoURL"
+                                     class="page-image">
+                            </a>
+                        </td>
+                        <td scope="col">
+                            <a [routerLink]="['/admin/pages/', page.uid]">
                                 <img [src]="page.photoURL"
-                                     [alt]="page.title"
                                      class="page-image">
                             </a>
                         </td>
