--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 
+body {
+    background-color: #fff;
+}
+
 /* removes blue halo */
 button:focus {
     outline: 0;
