--- a/src/app/components/core/home/home.component.html
+++ b/src/app/components/core/home/home.component.html
@@ -1,42 +1,44 @@
 <!-- * HOME * -->
 <ddw-navbar></ddw-navbar>
-<img src="https://s3.amazonaws.com/DDW/ddw-org/images/banners/ddw-2019-hero-blue.png"/>
+<!--<img src="https://s3.amazonaws.com/DDW/ddw-org/images/banners/ddw-2019-hero-blue.png"/>-->
 <!--<div class="hero"></div>-->
 <div class="row">
-    <div class="container text-center">
-        <div class="col-auto offset-md-1 offset-sm-0">
-            <div class="header-content">
-                <h1 class="title">{{ title }}</h1>
-                <h1 class="subtitle">{{ subtitle }} <span class="forTime">{{ forTime }}</span></h1>
-                <h2 class="loc-date">{{ subheaderLoc }}&nbsp;&nbsp;&nbsp;&nbsp;<span class="forTime">
+    <div class="hero">
+        <div class="container text-center">
+            <div class="col-auto offset-md-1 offset-sm-0">
+                <div class="header-content">
+                    <h1 class="title">{{ title }}</h1>
+                    <h1 class="subtitle">{{ subtitle }} <span class="forTime">{{ forTime }}</span></h1>
+                    <h2 class="loc-date">{{ subheaderLoc }}&nbsp;&nbsp;&nbsp;&nbsp;<span class="forTime">
                     <i class="fa fa-calendar"></i></span>&nbsp;&nbsp;{{ subheaderDate }}
-                </h2>
+                    </h2>
 
-                <div class="row">
-                    <div class="col-md-8 offset-md-1 offset-sm-0">
-                        <div class="container">
-                            <table *ngIf="time1$ | async as time1" class="countdown">
-                                <tbody>
-                                <tr>
-                                    <td class="text-center">
-                                        <div class="days"><h1 class="time">{{time1.days}}</h1></div>
-                                        <h6 class="time">Days</h6>
-                                    </td>
-                                    <td class="text-center">
-                                        <div class="hours"><h1 class="time">{{time1.hours}}</h1></div>
-                                        <h6 class="time">Hours</h6>
-                                    </td>
-                                    <td class="text-center">
-                                        <div class="minutes"><h1 class="time">{{time1.minutes}}</h1></div>
-                                        <h6 class="time">Minutes</h6>
-                                    </td>
-                                    <td class="text-center">
-                                        <div class="seconds"><h1 class="time">{{time1.seconds}}</h1></div>
-                                        <h6 class="time">Seconds</h6>
-                                    </td>
-                                </tr>
-                                </tbody>
-                            </table>
+                    <div class="row">
+                        <div class="col-md-8 offset-md-2 offset-sm-0">
+                            <div class="container">
+                                <table *ngIf="time1$ | async as time1" class="countdown">
+                                    <tbody>
+                                    <tr>
+                                        <td class="text-center">
+                                            <div class="days"><h1 class="time">{{time1.days}}</h1></div>
+                                            <h6 class="time">Days</h6>
+                                        </td>
+                                        <td class="text-center">
+                                            <div class="hours"><h1 class="time">{{time1.hours}}</h1></div>
+                                            <h6 class="time">Hours</h6>
+                                        </td>
+                                        <td class="text-center">
+                                            <div class="minutes"><h1 class="time">{{time1.minutes}}</h1></div>
+                                            <h6 class="time">Minutes</h6>
+                                        </td>
+                                        <td class="text-center">
+                                            <div class="seconds"><h1 class="time">{{time1.seconds}}</h1></div>
+                                            <h6 class="time">Seconds</h6>
+                                        </td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -45,3 +47,90 @@
     </div>
 </div>
 
+
+<div class="row">
+    <div class="container">
+        <div class="col-md-6 offset-md-3 text-center">
+            <h2 class="card-sec-title">DDW Post-Meeting Resources</h2>
+            <div class="col-4 offset-4">
+                <div class="underline"></div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="container">
+        <div class="card-sec-subtitle">
+            <p>DDW may be over, but a variety of guides and information are still available to you after the meeting. We
+                encourage all attendees to continue using these resources.</p>
+        </div>
+    </div>
+</div>
+
+
+<div class="row">
+    <div class="container">
+        <div class="row cards">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="card one-of-three text-center">
+                            <img class="card-img-top"
+                                 src="https://higherlogicdownload.s3.amazonaws.com/GASTRO/44b1f1fd-aaed-44c8-954f-b0eaea6b0462/UploadedImages/DDW19_Website_Bottom_360x230.png"
+                                 alt="">
+                            <div class="card-body">
+                                <h5 class="card-title">Why Attend DDW?</h5>
+                                <p class="card-text">Learn why DDW is the must-attend GI event of 2019 and what's
+                                    included
+                                    in registration.</p>
+                                <p class="text-center">
+                                    <a href="#"
+                                       class="btn btn-warning btn-lg">See Benefits
+                                    </a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card one-of-three text-center">
+                            <img class="card-img-top"
+                                 src="https://higherlogicdownload.s3.amazonaws.com/GASTRO/44b1f1fd-aaed-44c8-954f-b0eaea6b0462/UploadedImages/NightSanDiego_360x230.jpg"
+                                 alt="">
+                            <div class="card-body">
+                                <h5 class="card-title">San Diego Awaits</h5>
+                                <p class="card-text">San Diego is soaked in culture, 70+ miles of sparkling coastline
+                                    and a
+                                    vibrant downtown.</p>
+                                <p class="text-center">
+                                    <a href="#"
+                                       class="btn btn-warning btn-lg">Start Planning
+                                    </a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card one-of-three text-center">
+                            <img class="card-img-top"
+                                 src="https://higherlogicdownload.s3.amazonaws.com/GASTRO/44b1f1fd-aaed-44c8-954f-b0eaea6b0462/UploadedImages/DC%20Skyline%20in%20Autumn_360x240.jpg"
+                                 alt="">
+                            <div class="card-body">
+                                <h5 class="card-title">Weather in CA</h5>
+                                <p class="card-text">Temperatures boast an average of 71°F and 300 sunny days.</p>
+                                <p class="text-center">
+                                    <a href="#"
+                                       class="btn btn-warning btn-lg">Learn More
+                                    </a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- * FOOTER * -->
+<ddw-footer></ddw-footer>
