--- a/src/app/components/core/footer/footer.component.html
+++ b/src/app/components/core/footer/footer.component.html
@@ -109,14 +109,14 @@
 
 <div class="container-fluid copyright">
     <div class="row">
-        <div class="col-md-7">
+        <div class="col-md-6">
             <p>
                 &nbsp;Privacy Policy | &copy; 2018 Digestive Disease Week. All Rights Reserved.
             </p>
         </div>
         <div class="col">
             <p>
-                Site Designed by Brightfind and Powered by Higher Logic&nbsp;
+                Site Built by <a href="https://gastro.org" target="_blank" class="aga-copy">&copy; 2018 American Gastroenterological Association</a>.&nbsp;
                 <a href="https://www.facebook.com/DDWMeeting" target="_blank" class="social"><i
                         class="fab fa-facebook"></i></a>
                 <a href="https://twitter.com/DDWMeeting" target="_blank" class="social"><i
