Can now edit cards dynamically

--- a/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
+++ b/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
@@ -67,6 +67,15 @@
         </ul>
     </li>
 
+    <!-- * Cards * -->
+    <li class="sidenav-item" *ngIf="isLoggedIn">
+        <a [routerLink]="['/admin/cards']" class="sidenav-link">
+            <i class="sidenav-icon ion ion-md-quote"></i>
+            <div><i class="fal fa-passport"></i>&nbsp;Cards</div>
+        </a>
+    </li>
+
+    <!-- * Divider * -->
     <li class="sidenav-divider mb-1" *ngIf="isLoggedIn"></li>
 
     <!-- * Extras * -->
