--- a/src/app/components/admin/admin-core/admin-settings/admin-settings.component.html
+++ b/src/app/components/admin/admin-core/admin-settings/admin-settings.component.html
@@ -99,6 +99,12 @@
                                 <i class="fa fa-money-bill-wave"></i>&nbsp;Edit Advertising Scripts
                             </a>
                         </div>
+                        <div class="text-right m-2">
+                            <a [routerLink]="['/admin/cards']"
+                               class="btn btn-outline-primary borderless">
+                                <i class="fa fa-passport"></i>&nbsp;Edit Cards
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -125,7 +131,7 @@
                                    [(ngModel)]="countdown"
                                    #cd="ngModel">
                         </div>
-                        <button class="btn btn-primary">Save Countdown</button>
+                        <button class="btn btn-primary"><i class="fa fa-alarm-clock"></i>&nbsp;Save Countdown</button>
                     </form>
                 </div>
             </div>
