--- a/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
+++ b/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
@@ -25,7 +25,7 @@
                                formControlName="title">
                         <p class="help-block alert alert-warning text-center mt-1"
                            *ngIf="!f.title.valid && f.title.touched">
-                            Valid <b>Title</b> is required!
+                            <b>Title</b> is required!
                         </p>
                     </div>
 
@@ -47,6 +47,8 @@
                         <input type="string"
                                class="form-control"
                                bsDatepicker
+                               [bsConfig]="bsConfig"
+                               placement="bottom"
                                [class.invalid]="!f.date.valid && f.date.touched"
                                formControlName="date">
                         <p class="help-block alert alert-warning text-center mt-1"
@@ -157,7 +159,9 @@
 
 
                     <div class="form-group">
-                        <label>Banner Image URL <small>(Top banner image)</small></label>
+                        <label>Banner Image URL
+                            <small>(Top banner image)</small>
+                        </label>
                         <input type="text"
                                required
                                class="form-control"
