--- a/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
+++ b/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
@@ -70,6 +70,21 @@
 
 
                         <div class="form-group">
+                            <label>Slug</label>
+                            <input type="text"
+                                   class="form-control"
+                                   disabled
+                                   [class.invalid]="!f.url.valid && f.url.touched"
+                                   [(ngModel)]="url"
+                                   formControlName="url">
+                            <p class="help-block alert alert-warning text-center mt-1"
+                               *ngIf="!f.url.valid && f.url.touched">
+                                <b>Slug/URL</b> is required!
+                            </p>
+                        </div>
+
+
+                        <div class="form-group">
                             <label>Body</label>
                             <ckeditor formControlName="body"
                                       [class.invalid]="!f.body.valid && f.body.touched"
