--- a/src/app/components/core/home/home.component.html
+++ b/src/app/components/core/home/home.component.html
@@ -83,6 +83,44 @@
     </div>
 </div>
 
+<div class="row bg-blue">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 offset-md-3 text-center">
+                <h2 class="blue-sec">DDW Daily News Videos</h2>
+                <div class="col-4 offset-4">
+                    <div class="underline"></div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-10 offset-md-1 text-center">
+                <iframe width="560"
+                        height="315"
+                        src="https://www.youtube.com/embed/AGTlYCAwuJA"
+                        class="daily-news"
+                        frameborder="0"
+                        allow="autoplay; encrypted-media"
+                        allowfullscreen>
+                </iframe>
+            </div>
+        </div>
+        <div class="row text-center">
+            <h5>Get up-to-speed on the hottest topics at DDW. Watch video interviews with DDW 2018 presenters and
+                experts in the field. For additional news and videos, visit the <a href="http://blog.ddw.org/"
+                                                                                   target="_blank">DDW Blog</a>.</h5>
+        </div>
+    </div>
+</div>
+
+<!-- * AD * -->
+<div class="row">
+    <div class="container">
+        <div class="text-center">
+            <img [src]="ads$.headerbar" class="headerbar"/>
+        </div>
+    </div>
+</div>
 
 <!-- * FOOTER * -->
 <ddw-footer></ddw-footer>
