--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!-- * APP * -->
+<!--<ddw-meta-tags></ddw-meta-tags>-->
 <flash-messages class="text-center"></flash-messages>
 <router-outlet></router-outlet>
