--- a/src/app/components/admin/admin-core/admin-cards/admin-cards-edit/admin-cards-edit.component.html
+++ b/src/app/components/admin/admin-core/admin-cards/admin-cards-edit/admin-cards-edit.component.html
@@ -1,4 +1,20 @@
-<!-- * ADMIN-PAGE-NEW * -->
+<!-- * ADMIN-CARDS-EDIT * -->
+<div class="row mb-5 mt-3">
+    <div class="col-md-6 mx-auto">
+        <div class="card">
+            <div class="card-body">
+                <h1 class="text-center text-secondary pb-4 pt-3">
+                    <span class="text-dark">
+               <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/ddw-color.png"
+                    alt="ddw logo" class="ddw-logo" style="max-width:200px;"> <br>
+                        <i class="fa fa-passport"></i>&nbsp;Admin
+                    </span> Cards
+                </h1>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="row mb-4">
     <div class="container">
         <a class="text-primary back-pages"
@@ -175,7 +191,7 @@
                             <button type="submit"
                                     [disabled]="!cardForm1.valid"
                                     class="btn btn-primary btn-sm mb-5">
-                                <i class="fa fa-file-plus"></i>&nbsp;Update
+                                <i class="fa fa-passport"></i>&nbsp;Update
                             </button>
                         </form>
 
@@ -276,7 +292,7 @@
                             <button type="submit"
                                     [disabled]="!cardForm1.valid"
                                     class="btn btn-primary btn-sm mb-5">
-                                <i class="fa fa-file-plus"></i>&nbsp;Update
+                                <i class="fa fa-passport"></i>&nbsp;Update
                             </button>
                         </form>
 
@@ -378,7 +394,7 @@
                             <button type="submit"
                                     [disabled]="!cardForm1.valid"
                                     class="btn btn-primary btn-sm mb-5">
-                                <i class="fa fa-file-plus"></i>&nbsp;Update
+                                <i class="fa fa-passport"></i>&nbsp;Update
                             </button>
                         </form>
 
