--- a/src/app/components/core/home/home.component.html
+++ b/src/app/components/core/home/home.component.html
@@ -115,6 +115,16 @@
 </div>
 
 <!-- * Featured Blog Posts * -->
+<div class="row featured">
+    <div class="container">
+        <div class="col-md-6 offset-md-3 text-center">
+            <h2 class="by-nums-title"><b>Featured Blog Posts</b></h2>
+            <div class="col-4 offset-4">
+                <div class="underline"></div>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="row blog-posts">
     <div class="container">
         <div class="card-deck">
