--- a/src/app/components/core/home/home.component.html
+++ b/src/app/components/core/home/home.component.html
@@ -219,7 +219,7 @@
 <div class="row sponsors">
     <div class="container">
         <div class="col-md-6 offset-md-3 text-center">
-            <h2 class="by-nums-title"><b>DDW by the Numbers</b></h2>
+            <h2 class="by-nums-title"><b>DDW's Sponsoring Societies</b></h2>
             <div class="col-4 offset-4">
                 <div class="underline"></div>
             </div>
